--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "inherits": "^2.0.4",
     "ipaddr.js": "^1.9.1",
     "jake": "^10.9.4",
+    "image-to-pdf":"^3.0.2",
     "jsonwebtoken": "^9.0.2",
     "jwa": "^1.4.2",
     "jws": "^3.2.2",
