--- a/package.json
+++ b/package.json
@@ -103,6 +103,7 @@
     "negotiator": "^0.6.3",
     "node-poppler": "^8.0.4",
     "pdf-merge": "^1.2.0",
+    "pdf-lib":"^1.17.1",
     "pdf-to-png-converter": "^3.7.1"
   },
   "scripts": {
